@@ -55,8 +55,8 @@ int main(int argc, char **argv) {
     gnome_mdi_set_menubar_template(mdi, main_menu);
 
     /* and document menu and document list paths */
-    gnome_mdi_set_child_menu_path(mdi, _(CHILD_MENU_PATH));
-    gnome_mdi_set_child_list_path(mdi, _(CHILD_LIST_PATH));
+    gnome_mdi_set_child_menu_path(mdi, CHILD_MENU_PATH);
+    gnome_mdi_set_child_list_path(mdi, CHILD_LIST_PATH);
 
     /* connect signals */
     gtk_signal_connect(GTK_OBJECT(mdi), "remove_child", GTK_SIGNAL_FUNC(remove_doc_cb), NULL);
