@@ -1,3 +1,8 @@
+Wed Jan 06 22:53:20 1999  George Lebl  <jirka@5z.com>
+
+	* ui.c,main.c,callback.c,hex-document.c,ghex.h: standardized menus
+	  with the new gnome-app-helper macros
+
 1999-01-07  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>
 
 	* gnome-support.c: Removed the saved boolean value.
